--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ main{padding:14px;max-width:560px;margin:auto}
 h2{margin:0 0 8px 0;font-size:18px}
 button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
 .small{font-size:14px;padding:10px}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;z-index:9999}
+.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
+.item b{display:block;font-size:16px}
+.item .meta{opacity:.7;font-size:13px;margin-top:6px}
 video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
 .hidden{display:none}
 .stateOut{border-color:#a33}
@@ -25,98 +27,148 @@ video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
 <main id="app"></main>
 
 <script>
+/* ===== 設定 ===== */
 const GAS_URL="https://script.google.com/macros/s/AKfycbxVpcXoJFFmO_sqOi76kMrD6hgFBR4CdCD5hpI_4bTLD3VeVrP2qbxDiJ_RTrotzLsx/exec";
 
-const TOOL_NAME={T001:"手歯止め"};
+const TOOL_NAME={
+  T001:"手歯止め",
+  T002:"デジタルゲージ",
+  T003:"検測用具",
+  T004:"誘導棒",
+  D001:"その他（扉1）",
+  D002:"その他（扉2）",
+  D003:"その他（扉3）"
+};
 const MEMBERS=["佐藤","山田","高橋"];
 
+/* ===== URL ===== */
 const p=new URLSearchParams(location.search);
 const site=(p.get("site")||"").trim() || "A";
 const tool=(p.get("tool")||"").trim();
 const toolName=TOOL_NAME[tool]||"不明";
 
+/* ===== 共通 ===== */
 const app=document.getElementById("app");
 const hdr=document.getElementById("hdr");
-
-function toast(t){
-  const d=document.createElement("div");
-  d.className="toast";
-  d.textContent=t;
-  document.body.appendChild(d);
-  setTimeout(()=>d.remove(),2000);
-}
 
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
+/* ===== 通信 ===== */
 async function post(action, photoDataUrl){
-  const payload={datetime:new Date().toISOString(),site,tool,toolName,action,user:getUser()};
-  if(photoDataUrl) payload.photoDataUrl=photoDataUrl;
-  const r=await fetch(GAS_URL,{method:"POST",body:JSON.stringify(payload)});
-  if(!r.ok) throw new Error();
-  const j=await r.json();
-  if(j.result!=="ok") throw new Error();
+  const payload={
+    datetime:new Date().toISOString(),
+    site, tool, toolName,
+    action, user:getUser()
+  };
+  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
+
+  const r = await fetch(GAS_URL,{method:"POST",body:JSON.stringify(payload)});
+  const js = await r.json();
+  if(js.result!=="ok") throw new Error();
 }
 
 async function getStatus(){
-  const r=await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}`);
-  const j=await r.json();
-  if(j.result!=="ok") throw new Error();
-  return j.items||[];
+  const r = await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`);
+  const js = await r.json();
+  if(js.result!=="ok") throw new Error();
+  return js.items||[];
 }
 
+/* ===== UI ===== */
 function showUserSelect(){
   app.innerHTML=MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("");
 }
 window.pick=n=>{setUser(n);render();};
 
 function header(){
-  hdr.textContent=`現場：${site}　道具：${toolName}（${tool}）　端末：${getUser()}`;
+  hdr.textContent=`現場：${site}　道具：${toolName}（${tool}）　端末：${getUser()||"未設定"}`;
 }
 
 function ui(items){
   const me=items.find(x=>x.tool===tool);
-  const st=!me?"異常なし":me.status==="OUT"?"持ち出し中":me.status==="PENDING"?"返却確認待ち":"異常なし";
+  const statusText=!me?"異常なし":me.status==="OUT"?"持ち出し中":me.status==="PENDING"?"返却確認待ち":"異常なし";
 
   app.innerHTML=`
     <div class="card ${me?.status==="OUT"?"stateOut":me?.status==="PENDING"?"statePending":"stateIn"}">
-      <h2>${st}</h2>
+      <h2>${statusText}</h2>
+      ${me?.photoUrl?`<button class="small" onclick="open('${me.photoUrl}')">写真</button>`:""}
       ${me?.status==="PENDING"?`<button onclick="confirmOk()">確認</button>`:""}
     </div>
+
     <div class="card">
       <button onclick="take()">持ち出し</button>
+      <button onclick="startReturn()">返却（写真）</button>
+      <div id="cam" class="hidden">
+        <video id="v" autoplay playsinline></video>
+        <button onclick="shotAndSend()">撮影して返却</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>現場一覧</h2>
+      ${renderList(items)}
     </div>
   `;
 }
 
+function renderList(items){
+  const active=items.filter(x=>x.status==="OUT"||x.status==="PENDING");
+  if(active.length===0) return `<div class="item"><b>異常なし</b></div>`;
+  return `<div class="list">`+active.map(x=>{
+    const t=x.at?new Date(x.at).toLocaleString():"";
+    return `
+      <div class="item ${x.status==="OUT"?"stateOut":"statePending"}">
+        <b>${x.toolName}</b>
+        <div class="meta">${x.status} / ${x.by||""} / ${t}</div>
+      </div>`;
+  }).join("")+`</div>`;
+}
+
+/* ===== 操作 ===== */
+let stream=null;
+
 window.take=async()=>{
-  try{
-    await post("持ち出し");
-    toast("持ち出しOK");
-    refresh();
-  }catch{
-    toast("通信エラー");
-  }
+  await post("持ち出し");
+  refresh();
+};
+
+window.startReturn=async()=>{
+  const cam=document.getElementById("cam");
+  cam.classList.remove("hidden");
+  const v=document.getElementById("v");
+  stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
+  v.srcObject=stream;
+};
+
+async function capture(){
+  const v=document.getElementById("v");
+  await new Promise(r=>setTimeout(r,150));
+  const c=document.createElement("canvas");
+  c.width=640;c.height=360;
+  c.getContext("2d").drawImage(v,0,0,640,360);
+  return c.toDataURL("image/jpeg",0.4);
+}
+
+window.shotAndSend=async()=>{
+  const img=await capture();
+  stream.getTracks().forEach(t=>t.stop());
+  await post("返却",img);
+  refresh();
 };
 
 window.confirmOk=async()=>{
-  try{
-    await post("確認");
-    toast("確認OK");
-    refresh();
-  }catch{
-    toast("通信エラー");
-  }
+  await post("確認");
+  refresh();
 };
 
-/* ★ここが本命修正 */
+/* ===== 起動 ===== */
 async function refresh(){
   try{
     const items=await getStatus();
     ui(items);
-  }catch(e){
-    ui([]);            // ← 必ず描画
-    toast("状態取得失敗");
+  }catch{
+    ui([]);
   }
 }
 
@@ -124,6 +176,7 @@ function render(){
   header();
   if(!getUser()) return showUserSelect();
   refresh();
+  setInterval(refresh,15000);
 }
 render();
 </script>
