--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@ async function post(action, photoDataUrl){
   };
   if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
 
-  const r = await fetch(GAS_URL,{method:"POST",body:JSON.stringify(payload)});
+  const r = await fetch(GAS_URL,{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" }, // ★重要
+    body:JSON.stringify(payload)
+  });
   const js = await r.json();
   if(js.result!=="ok") throw new Error();
 }
@@ -145,9 +149,9 @@ async function capture(){
   const v=document.getElementById("v");
   await new Promise(r=>setTimeout(r,150));
   const c=document.createElement("canvas");
-  c.width=640;c.height=360;
+  c.width=640;c.height=360;              // 低画質
   c.getContext("2d").drawImage(v,0,0,640,360);
-  return c.toDataURL("image/jpeg",0.4);
+  return c.toDataURL("image/jpeg",0.4);  // 低品質
 }
 
 window.shotAndSend=async()=>{
