--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 body{margin:0;background:#111;color:#fff;font-family:-apple-system}
 header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
 main{padding:14px;max-width:560px;margin:auto}
-.card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
-button{width:100%;padding:14px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px}
+.card{border:1px solid #333;border-radius:12px;padding:16px;margin-bottom:14px}
+h2{margin:0 0 8px;font-size:20px}
+button{width:100%;padding:16px;font-size:20px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
+.stateOut{border-color:#a33}
+.statePending{border-color:#aa3}
+.stateIn{border-color:#333}
+.small{opacity:.7;font-size:14px}
 </style>
 </head>
 <body>
@@ -18,37 +22,80 @@ button{width:100%;padding:14px;font-size:18px;border-radius:12px;background:#1a1
 <main id="app"></main>
 
 <script>
-const app=document.getElementById("app");
-const hdr=document.getElementById("hdr");
+/* ===== 設定 ===== */
+const GAS_URL =
+"https://script.google.com/macros/s/AKfycbxVpcXoJFFmO_sqOi76kMrD6hgFBR4CdCD5hpI_4bTLD3VeVrP2qbxDiJ_RTrotzLsx/exec";
 
-/* ★通信・GASを完全に使わない */
+const TOOL_NAME={
+  T001:"手歯止め",
+  T002:"デジタルゲージ",
+  T003:"検測用具",
+  T004:"誘導棒"
+};
+
+/* ===== URL ===== */
 const p=new URLSearchParams(location.search);
 const site=p.get("site")||"未指定";
 const tool=p.get("tool")||"未指定";
+const toolName=TOOL_NAME[tool]||tool;
 
-function toast(t){
-  const d=document.createElement("div");
-  d.className="toast";
-  d.textContent=t;
-  document.body.appendChild(d);
-  setTimeout(()=>d.remove(),2000);
-}
+/* ===== DOM ===== */
+const hdr=document.getElementById("hdr");
+const app=document.getElementById("app");
 
-/* ★ここで必ず描画する */
-function ui(){
+/* ===== 表示 ===== */
+hdr.textContent=`現場：${site}　道具：${toolName}（${tool}）`;
+
+function draw(state,text,sub){
   app.innerHTML=`
-    <div class="card">
-      <h2>UI描画テスト</h2>
-      <div>現場：${site}</div>
-      <div>道具：${tool}</div>
-      <button onclick="toast('タップ反応OK')">持ち出し</button>
+    <div class="card ${state}">
+      <h2>${text}</h2>
+      <div class="small">${sub||""}</div>
     </div>
   `;
 }
 
-/* render */
-hdr.textContent=`現場：${site}　道具：${tool}`;
-ui();   // ★強制描画
+/* ===== 状態取得 ===== */
+async function loadStatus(){
+  draw("stateIn","状態取得中…","");
+  try{
+    const r=await fetch(
+      GAS_URL+"?mode=status&site="+encodeURIComponent(site)+"&t="+Date.now()
+    );
+    const j=await r.json();
+    if(j.result!=="ok") throw "bad";
+
+    const me=j.items.find(x=>x.tool===tool);
+
+    if(!me){
+      draw("stateIn","異常なし","持ち出し・返却待ちはありません");
+      return;
+    }
+
+    if(me.status==="OUT"){
+      draw("stateOut","持ち出し中",
+        `実行者：${me.by||""} / ${new Date(me.at).toLocaleString()}`
+      );
+      return;
+    }
+
+    if(me.status==="PENDING"){
+      draw("statePending","返却確認待ち",
+        `実行者：${me.by||""} / ${new Date(me.at).toLocaleString()}`
+      );
+      return;
+    }
+
+    draw("stateIn","異常なし","");
+
+  }catch(e){
+    draw("stateIn","通信失敗","状態を取得できません");
+  }
+}
+
+/* ===== 実行 ===== */
+loadStatus();
+setInterval(loadStatus,15000);
 </script>
 </body>
 </html>
