--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>器具確認</title>
+<title>器具員数確認</title>
 <style>
 body{margin:0;background:#111;color:#fff;font-family:-apple-system}
 header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
 main{padding:14px;max-width:560px;margin:auto}
-.card{border:1px solid #333;border-radius:12px;padding:16px;margin-bottom:14px}
-h2{margin:0 0 8px;font-size:20px}
-button{width:100%;padding:16px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333;margin-top:10px}
+.card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
+h2{margin:0 0 8px 0;font-size:18px}
+.badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
+.row{display:flex;gap:10px;flex-wrap:wrap}
+button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
+.small{font-size:14px;padding:10px}
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
+.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
+.item b{display:block;font-size:16px}
+.item .meta{opacity:.7;font-size:13px;margin-top:6px}
+video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
+.hidden{display:none}
 .stateOut{border-color:#a33}
 .statePending{border-color:#aa3}
 .stateIn{border-color:#333}
-.small{opacity:.7;font-size:14px}
 </style>
 </head>
 <body>
@@ -22,114 +30,359 @@ button{width:100%;padding:16px;font-size:18px;border-radius:12px;background:#1a1
 <main id="app"></main>
 
 <script>
-const GAS_URL =
-"https://script.google.com/macros/s/AKfycbxVpcXoJFFmO_sqOi76kMrD6hgFBR4CdCD5hpI_4bTLD3VeVrP2qbxDiJ_RTrotzLsx/exec";
+/* ===== 設定 ===== */
+const GAS_URL="https://script.google.com/macros/s/AKfycbxVpcXoJFFmO_sqOi76kMrD6hgFBR4CdCD5hpI_4bTLD3VeVrP2qbxDiJ_RTrotzLsx/exec";
 
-const p = new URLSearchParams(location.search);
-const site = p.get("site") || "未指定";
-const tool = p.get("tool"); // 無ければ確認者
+const TOOL_NAME={
+  T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
+  T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
+};
+const MEMBERS=["佐藤","山田","高橋"];
 
-const hdr = document.getElementById("hdr");
-const app = document.getElementById("app");
+/* ===== URL ===== */
+const p=new URLSearchParams(location.search);
+const site=(p.get("site")||"").trim() || "A";
+const tool=(p.get("tool")||"").trim(); // 無いなら確認者用
+const toolName=tool ? (TOOL_NAME[tool]||"不明") : "";
 
-hdr.textContent = tool
-  ? `現場：${site}　道具：${tool}`
-  : `現場：${site}　確認者`;
+/* ===== 共通 ===== */
+const app=document.getElementById("app");
+const hdr=document.getElementById("hdr");
 
-function draw(html){
-  app.innerHTML = html;
+function toast(a,b="",ms=2200){
+  const d=document.createElement("div");
+  d.className="toast";
+  d.innerHTML=`<div style="font-size:20px">${a}</div><div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`;
+  document.body.appendChild(d);
+  setTimeout(()=>d.remove(),ms);
 }
 
-function fetchWithTimeout(url, ms){
+function vibrate(ms){
+  try{ if (navigator.vibrate) navigator.vibrate(ms); }catch(_){}
+}
+
+function getUser(){return localStorage.getItem("user")||"";}
+function setUser(n){localStorage.setItem("user",n);}
+
+/* ===== 連打ガード/体感改善 ===== */
+let busy=false;
+function setBusy(on, msg){
+  busy=!!on;
+  if(on) toast(msg || "送信中…","",1200);
+}
+
+/* ===== 追加：fetch ハング対策（AbortController使わない） ===== */
+function fetchJsonWithTimeout_(url, ms){
   return Promise.race([
-    fetch(url).then(r=>r.json()),
-    new Promise((_,reject)=>setTimeout(()=>reject("timeout"), ms))
+    fetch(url, {method:"GET"}).then(r=>{
+      if(!r.ok) throw new Error("http "+r.status);
+      return r.json();
+    }),
+    new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))
+  ]);
+}
+function fetchPostJsonWithTimeout_(url, bodyText, ms){
+  return Promise.race([
+    fetch(url,{method:"POST", body: bodyText}).then(r=>{
+      if(!r.ok) throw new Error("http "+r.status);
+      return r.json().catch(()=>({}));
+    }),
+    new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))
   ]);
 }
 
-function post(action){
-  return fetch(GAS_URL,{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
-      site, tool,
-      toolName:tool||"",
-      action,
-      user:"現場端末"
-    })
-  });
+/* ===== 通信 ===== */
+async function post(action, photoDataUrl, overrideTool){
+  const payload={
+    datetime:new Date().toISOString(),
+    site,
+    tool: overrideTool || tool,
+    toolName: (overrideTool ? (TOOL_NAME[overrideTool]||"不明") : toolName),
+    action,
+    user:getUser()
+  };
+  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
+
+  // CORS回避：Content-Type 付けない（プリフライト回避）
+  const js = await fetchPostJsonWithTimeout_(GAS_URL, JSON.stringify(payload), 7000);
+  if(js && js.result && js.result!=="ok") throw new Error(js.message || "gas error");
 }
 
-function loadStatus(){
-  draw(`<div class="card stateIn"><h2>状態取得中…</h2></div>`);
-
-  fetchWithTimeout(
-    GAS_URL+"?mode=status&site="+encodeURIComponent(site)+"&t="+Date.now(),
-    5000
-  ).then(j=>{
-    const items = Array.isArray(j.items) ? j.items : [];
-
-    /* ===== 確認者 ===== */
-    if(!tool){
-      if(items.length===0){
-        draw(`<div class="card stateIn"><h2>異常なし</h2></div>`);
-        return;
-      }
-      draw(items.map(x=>`
-        <div class="card ${x.status==="OUT"?"stateOut":"statePending"}">
-          <h2>${x.toolName||x.tool}</h2>
-          <div class="small">${x.status} / ${x.by||""}</div>
-        </div>
-      `).join(""));
-      return;
-    }
-
-    /* ===== 作業者 ===== */
-    const me = items.find(x=>x.tool===tool);
-    if(!me){
-      draw(`
-        <div class="card stateIn">
-          <h2>異常なし</h2>
-          <button onclick="doTake()">持ち出し</button>
-        </div>
-      `);
-      return;
-    }
-
-    if(me.status==="OUT"){
-      draw(`
-        <div class="card stateOut">
-          <h2>持ち出し中</h2>
-          <button onclick="doReturn()">返却</button>
-        </div>
-      `);
-      return;
-    }
-
-    if(me.status==="PENDING"){
-      draw(`<div class="card statePending"><h2>返却確認待ち</h2></div>`);
-      return;
-    }
-
-    draw(`<div class="card stateIn"><h2>異常なし</h2></div>`);
-
-  }).catch(()=>{
-    draw(`<div class="card stateIn"><h2>取得失敗</h2><div class="small">再読み込みしてください</div></div>`);
-  });
+async function getStatus(){
+  const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`;
+  const js = await fetchJsonWithTimeout_(url, 6000);
+  if(!js || js.result!=="ok") throw new Error("status error");
+  return js.items || [];
 }
 
-function doTake(){
-  draw(`<div class="card stateIn"><h2>処理中…</h2></div>`);
-  post("持ち出し").finally(loadStatus);
+/* ===== カメラ（返却は必須） ===== */
+let stream=null;
+
+/* ===== 確認者用/作業者用 共通：端末名 ===== */
+function showUserSelect(titleText){
+  app.innerHTML=`
+    <div class="card">
+      <h2>${titleText}<span class="badge">最初の1回だけ</span></h2>
+      ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
+    </div>`;
+}
+window.pick=n=>{setUser(n);render();};
+
+function header(){
+  if(tool){
+    hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
+  }else{
+    hdr.textContent = `現場：${site}　確認者　端末：${getUser()||"未設定"}`;
+  }
 }
 
-function doReturn(){
-  draw(`<div class="card stateIn"><h2>処理中…</h2></div>`);
-  post("返却").finally(loadStatus);
+/* ===== ローカル即時反映（体感改善） ===== */
+let lastItemsCache=[];
+function upsertLocal_(rec){
+  const idx = lastItemsCache.findIndex(x=>x.tool===rec.tool);
+  const at = rec.at || new Date().toISOString();
+  const merged = {
+    site: rec.site || site,
+    tool: rec.tool,
+    toolName: rec.toolName || (TOOL_NAME[rec.tool]||rec.tool),
+    status: rec.status,
+    by: rec.by || getUser(),
+    at,
+    photoUrl: rec.photoUrl || ""
+  };
+  if(idx>=0) lastItemsCache[idx]=merged;
+  else lastItemsCache.push(merged);
 }
 
-loadStatus();
-setInterval(loadStatus,15000);
+/* ===== UI：作業者用 ===== */
+function uiWorker(statusItems){
+  lastItemsCache = Array.isArray(statusItems) ? statusItems.slice() : [];
+
+  const byTool = {};
+  for(const it of statusItems){ byTool[it.tool] = it; }
+  const me = byTool[tool];
+
+  const statusText = (
+    !me ? "異常なし" :
+    me.status==="OUT" ? `${me.toolName} を持ち出し中` :
+    me.status==="PENDING" ? `${me.toolName} 返却確認待ち` :
+    "異常なし"
+  );
+
+  const needConfirm = me && me.status==="PENDING";
+  const photoUrl = (me && me.photoUrl) ? me.photoUrl : "";
+
+  app.innerHTML=`
+    <div class="card ${needConfirm?'statePending': (me && me.status==='OUT'?'stateOut':'stateIn')}">
+      <h2>状態</h2>
+      <div style="font-size:20px">${statusText}</div>
+      ${needConfirm ? `<div style="opacity:.8;margin-top:8px">写真を確認してから「確認」を押す</div>` : ``}
+      ${photoUrl ? `<button class="small" onclick="openPhoto('${photoUrl.replace(/'/g,"%27")}')">写真を見る</button>` : ``}
+      ${needConfirm ? `<button onclick="confirmOk()">確認</button>` : ``}
+    </div>
+
+    <div class="card">
+      <h2>${toolName}</h2>
+      <button onclick="take()" ${busy?'disabled':''}>持ち出し</button>
+      <button onclick="startReturn()" ${busy?'disabled':''}>返却（写真必須）</button>
+
+      <div id="cam" class="card hidden" style="margin-top:12px">
+        <video id="v" autoplay playsinline></video>
+        <button onclick="shotAndSend()" ${busy?'disabled':''}>撮影して返却</button>
+        <button class="small" onclick="cancelCam()">中止</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>現場の一覧</h2>
+      ${renderList(statusItems, true)}
+    </div>
+  `;
+}
+
+/* ===== UI：確認者用（tool無しで現場全体を見る） ===== */
+function uiChecker(statusItems){
+  lastItemsCache = Array.isArray(statusItems) ? statusItems.slice() : [];
+
+  app.innerHTML=`
+    <div class="card">
+      <h2>現場の一覧（確認者）</h2>
+      ${renderList(statusItems, false)}
+    </div>
+  `;
+}
+
+/* ===== 一覧描画：confirmAllowed=trueなら確認ボタンを出す ===== */
+function renderList(items, confirmAllowed){
+  const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
+  if(active.length===0){
+    return `<div class="item"><b>異常なし</b><div class="meta">持ち出し中／返却確認待ちはありません</div></div>`;
+  }
+  return `<div class="list">` + active.map(x=>{
+    const label = (x.status==="OUT") ? "持ち出し中" : "返却確認待ち";
+    const t = x.at ? new Date(x.at).toLocaleString() : "";
+    const canConfirm = confirmAllowed && x.status==="PENDING";
+    return `
+      <div class="item ${x.status==="OUT"?'stateOut':'statePending'}">
+        <b>${x.toolName}（${x.tool}）</b>
+        <div class="meta">${label} / ${x.by||""} / ${t}</div>
+        ${x.photoUrl ? `<button class="small" onclick="openPhoto('${x.photoUrl.replace(/'/g,"%27")}')">写真</button>` : ``}
+        ${canConfirm ? `<button class="small" onclick="confirmByTool('${x.tool.replace(/'/g,"%27")}')">この道具を確認</button>` : ``}
+      </div>
+    `;
+  }).join("") + `</div>`;
+}
+
+window.openPhoto=(u)=>{ window.open(u, "_blank"); };
+
+/* ===== 作業者操作 ===== */
+window.take=async()=>{
+  if(busy) return;
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
+  setBusy(true,"送信中…");
+  try{
+    await post("持ち出し");
+    vibrate(80);
+    upsertLocal_({tool, toolName, status:"OUT", by:getUser(), at:new Date().toISOString()});
+    uiWorker(lastItemsCache);
+    toast("持ち出しを記録","");
+    await refresh();
+  }catch(e){
+    toast("通信エラー","記録できていません");
+  }finally{ setBusy(false); }
+};
+
+window.startReturn=async()=>{
+  if(busy) return;
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
+  try{
+    const cam=document.getElementById("cam");
+    cam.classList.remove("hidden");
+    const v=document.getElementById("v");
+    stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
+    v.srcObject = stream;
+  }catch(e){
+    toast("カメラ起動できない","許可/HTTPS/設定を確認");
+  }
+};
+
+window.cancelCam=()=>{
+  try{ if(stream) stream.getTracks().forEach(t=>t.stop()); }catch(_){}
+  stream=null;
+  const cam=document.getElementById("cam");
+  if(cam) cam.classList.add("hidden");
+};
+
+/* 超低画質：長辺640 / 品質0.4 */
+async function captureJpegDataUrl_(){
+  const v=document.getElementById("v");
+  if(!v) throw new Error("video not found");
+  await new Promise(r=>setTimeout(r,150));
+
+  const srcW=v.videoWidth||1280, srcH=v.videoHeight||720;
+  const MAX=640;
+
+  let w=srcW, h=srcH;
+  if (w > h && w > MAX) { h = Math.round(h * MAX / w); w = MAX; }
+  else if (h >= w && h > MAX) { w = Math.round(w * MAX / h); h = MAX; }
+
+  const c=document.createElement("canvas");
+  c.width=w; c.height=h;
+  const ctx=c.getContext("2d");
+  ctx.drawImage(v,0,0,w,h);
+
+  return c.toDataURL("image/jpeg",0.4);
+}
+
+window.shotAndSend=async()=>{
+  if(busy) return;
+  try{
+    setBusy(true,"送信中…");
+    const dataUrl = await captureJpegDataUrl_();
+    cancelCam();
+
+    await post("返却", dataUrl);
+    vibrate([60,60,60]);
+
+    upsertLocal_({tool, toolName, status:"PENDING", by:getUser(), at:new Date().toISOString()});
+    uiWorker(lastItemsCache);
+
+    toast("返却を記録","確認待ち");
+    await refresh();
+  }catch(e){
+    toast("通信エラー","記録できていません");
+  }finally{ setBusy(false); }
+};
+
+window.confirmOk=async()=>{
+  if(busy) return;
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
+  setBusy(true,"送信中…");
+  try{
+    await post("確認");
+    vibrate(80);
+
+    upsertLocal_({tool, toolName, status:"IN", by:getUser(), at:new Date().toISOString()});
+    uiWorker(lastItemsCache);
+
+    toast("確認を記録","");
+    await refresh();
+  }catch(e){
+    toast("通信エラー","記録できていません");
+  }finally{ setBusy(false); }
+};
+
+/* ===== 確認者：一覧からtool指定で確認 ===== */
+window.confirmByTool=async(t)=>{
+  if(busy) return;
+  setBusy(true,"送信中…");
+  try{
+    await post("確認", null, t);
+    vibrate(80);
+
+    // 体感：その場でIN化
+    upsertLocal_({tool:t, toolName:(TOOL_NAME[t]||t), status:"IN", by:getUser(), at:new Date().toISOString()});
+    uiChecker(lastItemsCache);
+
+    toast("確認を記録","");
+    await refresh();
+  }catch(e){
+    toast("通信エラー","記録できていません");
+  }finally{ setBusy(false); }
+};
+
+async function refresh(){
+  try{
+    const items = await getStatus();
+    if(tool) uiWorker(items);
+    else uiChecker(items);
+  }catch(e){
+    // 取得失敗でも“固まらせない”：キャッシュがあればそれを出す
+    if(lastItemsCache.length){
+      if(tool) uiWorker(lastItemsCache);
+      else uiChecker(lastItemsCache);
+    }else{
+      // 初回も落ちる時は、最低限の画面を出す
+      if(tool) uiWorker([]);
+      else uiChecker([]);
+    }
+    toast("通信エラー","状態を取得できません");
+  }
+}
+
+function render(){
+  header();
+
+  // 端末名は「作業者」「確認者」どっちも必要（名前を消さないため）
+  if(!getUser()){
+    showUserSelect(tool ? "この端末の名前（作業者）" : "この端末の名前（確認者）");
+    return;
+  }
+
+  refresh();
+  setInterval(()=>{ if(!busy) refresh(); }, 15000);
+}
+render();
 </script>
 </body>
 </html>
